# foundry-python-core

./: .copier-answers.yml  .gitignore  .license-types-allowed  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  FOUNDRY_README.md  LICENSE  README.md  SECURITY.md  codecov.yml  mise.toml  noxfile.py  pyproject.toml  pyrightconfig.json  renovate.json  sonar-project.properties  tasks.toml
.cz-templates/: CHANGELOG.md.j2  version.md.j2
.github/: AGENTS.md  CODEOWNERS
.github/actions/run-tests/: action.yml
.github/actions/setup-dev-env/: action.yml
.github/workflows/: _audit.yml  _codeql.yml  _lint.yml  _package-publish.yml  _scheduled-audit.yml  _scheduled-test-daily.yml  _scheduled-test-hourly.yml  _test.yml  audit-scheduled.yml  bump.yml  check-action-pins.yml  ci-cd.yml  claude-code-automation-pr-review.yml  codeql-scheduled.yml  git-conventions.yml  labels-sync.yml  mise-lock-sync.yml  test-scheduled-production-daily.yml  test-scheduled-production-hourly.yml  test-scheduled-staging-daily.yml  test-scheduled-staging-hourly.yml
.mise/scripts/: generate_attributions.py
.mise/tasks/: python_min_version
docs/: README.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-module-structure.md  0003-project-context-injection.md  0004-databasesettings-url-attribute.md  0005-gui-page-registration.md  0006-cloud-run-otel-telemetry-export.md  README.md
docs/foundry/: README.md  ci-cd.md  code-quality.md  getting-started.md  testing.md  troubleshooting.md
src/aignostics_foundry_core/: AGENTS.md  __init__.py  boot.py  cli.py  console.py  database.py  di.py  foundry.py  greet.py  health.py  log.py  models.py  otel.py  process.py  scheduler.py  sentry.py  service.py  settings.py  user_agent.py
src/aignostics_foundry_core/api/: __init__.py  auth.py  core.py  exceptions.py
src/aignostics_foundry_core/certs/: aignx-ca-root-authority.pem
src/aignostics_foundry_core/gui/: __init__.py  auth.py  core.py  nav.py
tests/: AGENTS.md  __init__.py  conftest.py
tests/aignostics_foundry_core/: __init__.py  boot_test.py  cli_test.py  console_test.py  database_settings_test.py  database_test.py  di_test.py  foundry_test.py  greet_test.py  health_test.py  log_test.py  models_test.py  otel_test.py  process_test.py  scheduler_test.py  sentry_test.py  service_test.py  settings_test.py  user_agent_test.py
tests/aignostics_foundry_core/api/: __init__.py  auth_test.py  core_test.py  exceptions_test.py
tests/aignostics_foundry_core/gui/: __init__.py  conftest.py  gui_test.py
